--- a/IdAM/Components/Layout/NavMenu.razor
+++ b/IdAM/Components/Layout/NavMenu.razor
@@ -31,6 +31,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="eapps">
+                        <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Apps
+                    </NavLink>
+                </div>                
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
